--- a/src/Gistlyn.AppConsole/packages.config
+++ b/src/Gistlyn.AppConsole/packages.config
@@ -1,27 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ILRepack" version="2.0.16" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.9.0" targetFramework="net462" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.10.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="2.10.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="2.10.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="2.10.0" targetFramework="net462" />
-  <package id="ServiceStack" version="5.5.0" targetFramework="net462" />
-  <package id="ServiceStack.Client" version="5.5.0" targetFramework="net462" />
-  <package id="ServiceStack.Common" version="5.5.0" targetFramework="net462" />
-  <package id="ServiceStack.Interfaces" version="5.5.0" targetFramework="net462" />
-  <package id="ServiceStack.OrmLite" version="5.5.0" targetFramework="net462" />
-  <package id="ServiceStack.OrmLite.Sqlite" version="5.5.0" targetFramework="net462" />
-  <package id="ServiceStack.Redis" version="5.5.0" targetFramework="net462" />
-  <package id="ServiceStack.Server" version="5.5.0" targetFramework="net462" />
-  <package id="ServiceStack.Text" version="5.5.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.9.4" targetFramework="net462" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net462" />
+  <package id="ServiceStack" version="5.6.0" targetFramework="net462" />
+  <package id="ServiceStack.Client" version="5.6.0" targetFramework="net462" />
+  <package id="ServiceStack.Common" version="5.6.0" targetFramework="net462" />
+  <package id="ServiceStack.Interfaces" version="5.6.0" targetFramework="net462" />
+  <package id="ServiceStack.OrmLite" version="5.6.0" targetFramework="net462" />
+  <package id="ServiceStack.OrmLite.Sqlite" version="5.6.0" targetFramework="net462" />
+  <package id="ServiceStack.Redis" version="5.6.0" targetFramework="net462" />
+  <package id="ServiceStack.Server" version="5.6.0" targetFramework="net462" />
+  <package id="ServiceStack.Text" version="5.6.0" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net462" />
   <package id="System.Console" version="4.3.1" targetFramework="net462" />
-  <package id="System.Data.SQLite.Core" version="1.0.110.0" targetFramework="net462" />
+  <package id="System.Data.SQLite.Core" version="1.0.111.0" targetFramework="net462" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net462" />
@@ -34,7 +35,7 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Linq" version="4.3.0" targetFramework="net462" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net462" />
-  <package id="System.Memory" version="4.5.2" targetFramework="net462" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net462" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net462" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net462" />
@@ -54,7 +55,7 @@
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net462" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
