--- a/src/Gistlyn.SnippetEngine/packages.config
+++ b/src/Gistlyn.SnippetEngine/packages.config
@@ -1,25 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CodeAnalysis" version="2.10.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.9.0" targetFramework="net462" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.10.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="2.10.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="2.10.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="2.10.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.Scripting" version="2.10.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="2.10.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic" version="2.10.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.10.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.10.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.9.4" targetFramework="net462" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.Scripting" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="3.2.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="3.2.0" targetFramework="net462" />
   <package id="Microsoft.Composition" version="1.0.31" targetFramework="net462" />
+  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net462" />
   <package id="Microsoft.Net.Compilers" version="2.10.0" targetFramework="net462" developmentDependency="true" />
-  <package id="ServiceStack.Text" version="5.5.0" targetFramework="net462" />
-  <package id="SQLitePCLRaw.bundle_green" version="1.1.11" targetFramework="net462" />
-  <package id="SQLitePCLRaw.core" version="1.1.11" targetFramework="net462" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.11" targetFramework="net462" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.11" targetFramework="net462" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.11" targetFramework="net462" />
-  <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.11" targetFramework="net462" />
+  <package id="ServiceStack.Text" version="5.6.0" targetFramework="net462" />
+  <package id="SQLitePCLRaw.bundle_green" version="2.0.0" targetFramework="net462" />
+  <package id="SQLitePCLRaw.core" version="2.0.0" targetFramework="net462" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.0" targetFramework="net462" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.14" targetFramework="net462" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.14" targetFramework="net462" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.14" targetFramework="net462" />
+  <package id="SQLitePCLRaw.provider.dynamic_cdecl" version="2.0.0" targetFramework="net462" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.14" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
@@ -44,7 +47,7 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Linq" version="4.3.0" targetFramework="net462" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net462" />
-  <package id="System.Memory" version="4.5.2" targetFramework="net462" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net462" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net462" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net462" />
@@ -66,7 +69,7 @@
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net462" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
